--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
+<div class="bg-background text-text p-4 dark:bg-background">
+  <h1 class="text-primary font-roboto text-4xl font-bold">Hola, mundo!</h1>
+  <p class="text-secondary">Este es un texto de ejemplo.</p>
+</div>
+
 <router-outlet />
