--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,14 @@
-<div class="bg-background text-text p-4 dark:bg-background">
-  <h1 class="text-primary font-roboto text-4xl font-bold">Hola, mundo!</h1>
-  <p class="text-secondary">Este es un texto de ejemplo.</p>
-</div>
+@defer{
+<app-header (sectionSelected)="scrollToSection($event)" [activeSection]="activeSection" />
+<main class="flex flex-col justify-between items-center container m-auto px-4 lg:px-16">
+  Hola
+  <div class="bg-primary-container">
 
-<router-outlet />
+  </div>
+</main>
+<!--<router-outlet />-->
+}@placeholder {
+<app-loading-placeholder message="Preparando para cargar datos..." />
+}@loading {
+<app-loading-placeholder message="Cargando datos..." />
+}
