feat: add subtle floating animation effect

--- a/src/app/sections/hero/hero.component.html
+++ b/src/app/sections/hero/hero.component.html
@@ -24,7 +24,7 @@
 			</app-social-pill>
 		</nav>
 	</div>
-	<div class="basis-1/2">
+	<div class="basis-1/2 float-animation">
 		<app-person-hero-icon 
       className="w-full h-auto" 
       [fillPrimary]="darkTheme() ? '#8CCFF1' : '#156683'"
