--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-@defer{
+@defer(when !isLoadingLang() && !isLoadingTheme()){
   <app-header (sectionSelected)="scrollToSection($event)" [activeSection]="activeSection" />
-  <main class="flex flex-col justify-between items-center container m-auto px-4 lg:px-16">
+  <main class="flex flex-col  container m-auto px-4 lg:px-16">
     <section id="hero">
       <app-hero />
     </section>
