--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -6,8 +6,17 @@
   <div class="flex flex-col justify-between h-full gap-6">
     <div class="flex flex-col gap-6">
       <div class="box-border rounded-lg overflow-hidden ">
-        <img class="group-hover:scale-110 transition-transform" [src]="project.imageUrl" [alt]="project.title"
-          draggable="false" />
+        @if (!imageError) {
+          <img class="group-hover:scale-110 transition-transform duration-200 aspect-video " [src]="project.imageUrl" [alt]="project.title"
+            draggable="false" (error)="imageError = true"/>
+        }@else {
+          <div class="flex items-center justify-center aspect-video mb-4 bg-gray-300 rounded-lg dark:bg-gray-700">
+            <svg class="w-10 h-10 text-gray-200 dark:text-gray-600" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 20">
+                <path d="M14.066 0H7v5a2 2 0 0 1-2 2H0v11a1.97 1.97 0 0 0 1.934 2h12.132A1.97 1.97 0 0 0 16 18V2a1.97 1.97 0 0 0-1.934-2ZM10.5 6a1.5 1.5 0 1 1 0 2.999A1.5 1.5 0 0 1 10.5 6Zm2.221 10.515a1 1 0 0 1-.858.485h-8a1 1 0 0 1-.9-1.43L5.6 10.039a.978.978 0 0 1 .936-.57 1 1 0 0 1 .9.632l1.181 2.981.541-1a.945.945 0 0 1 .883-.522 1 1 0 0 1 .879.529l1.832 3.438a1 1 0 0 1-.031.988Z"/>
+                <path d="M5 5V.13a2.96 2.96 0 0 0-1.293.749L.879 3.707A2.98 2.98 0 0 0 .13 5H5Z"/>
+            </svg>
+          </div>
+        }
       </div>
       <div class="flex flex-col gap-2">
         <h3 class="text-lg font-semibold font-poppins">{{ project.title }}</h3>
@@ -19,50 +28,19 @@
     <div class="flex flex-col sm:flex-row items-center justify-between gap-5 sm:gap-0 ">
       <div class="inline-flex items-center gap-2">
         @for (tech of project.technologies; track tech) {
-        <span class="inline-flex items-center justify-center size-9 rounded-full
-                    border border-light-onSurface dark:border-dark-onSurface">
-          <!-- @switch(tech) {
-            @case ('java') {
-            <app-java-icon className="size-[22px]" [fillColor]="darkTheme ? '#DCE3E9' : '#40484C'" />
+          <span class="inline-flex items-center justify-center size-9 rounded-full border border-on-surface text-on-surface-variant">
+            @if (getIconComponent(tech)) {
+              <ng-container *ngComponentOutlet="getIconComponent(tech).component; inputs:{className: getIconComponent(tech).class}"/>
+            } @else {
+              <span> {{ tech }} </span>
             }
-            @case ('android') {
-            <app-android-icon className="size-5" [fillColor]="darkTheme ? '#DCE3E9' : '#40484C'" />
-            }
-            @case ('sqlite') {
-            <app-sqlite-icon className="size-4" [fillColor]="darkTheme ? '#DCE3E9' : '#40484C'" />
-            }
-            @case ('tailwindcss') {
-              <app-tailwindcss-icon className="size-5" [fillColor]="darkTheme ? '#DCE3E9' : '#40484C'"/>
-            }
-            @case ('angular') {
-              <app-angular-icon className="size-5" [fillColor]="darkTheme ? '#DCE3E9' : '#40484C'"/>
-            }
-            @case ('mysql') {
-              <app-mysql-icon className="size-5" [fillColor]="darkTheme ? '#DCE3E9' : '#40484C'"/>
-            }
-            @case ('nodejs') {
-              <app-node-icon className="size-5" [fillColor]="darkTheme ? '#DCE3E9' : '#40484C'"/>
-            }
-            @case ('bootstrap') {
-              <app-bootstrap-icon className="size-6" [fillColor]="darkTheme ? '#DCE3E9' : '#40484C'"/>
-            }
-            @case ('php') {
-              <app-php-icon className="size-5" [fillColor]="darkTheme ? '#DCE3E9' : '#40484C'"/>
-            }
-            @case ('postgresql') {
-              <app-postgresql-icon className="size-5" [fillColor]="darkTheme ? '#DCE3E9' : '#40484C'"/>
-            }
-            @default {
-            <span> {{ tech }}</span>
-            }
-          } -->
-        </span>
+          </span>
         }
       </div>
       <a [href]="project.detailsUrl" target="_blank" class="flex rounded-lg gap-1 font-medium text-secondary transition
         hover:bg-secondary-container px-4 py-2">
         {{ translations().projects.cards.details }}
-        <!-- <app-arrow-up-right-icon className="size-6" /> -->
+        <app-arrow-up-right-icon className="size-6" />
       </a>
     </div>
   </div>
