--- a/src/app/sections/projects/projects.component.html
+++ b/src/app/sections/projects/projects.component.html
@@ -1,23 +1,55 @@
-<section [id]="sectionId" class="my-6 flex flex-col justify-center items-center">
-  <h2 class="text-3xl font-bold text-center">{{ translations().projects.title }}</h2>
-  @if (displayedProjects().length > 0) {
-    <div class="py-8 grid gap-6 grid-cols-1 md:grid-cols-2 2xl:grid-cols-3 auto-rows-fr">
-      @for (project of displayedProjects(); track project.id) {
-        <app-card [project]="mapProject(project)"/>
+<section [id]="sectionId">
+  <div class="my-6 flex flex-col items-center">
+    <h2 class="text-3xl font-bold text-center">{{ translations().projects.title }}</h2>
+    @if (loading()) {
+      <div @fadeOut class="mt-8 flex flex-col md:flex-row justify-center items-center gap-6 w-full">
+        @for (i of skeletons(); track i) {
+          <div role="status" class="flex-1 max-w-lg w-full p-6 border border-gray-200 rounded-lg shadow-sm animate-pulse md:p-6 dark:border-gray-700">
+            <div class="flex items-center justify-center aspect-video mb-4 bg-gray-300 rounded-lg dark:bg-gray-700">
+                <svg class="w-10 h-10 text-gray-200 dark:text-gray-600" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 20">
+                    <path d="M14.066 0H7v5a2 2 0 0 1-2 2H0v11a1.97 1.97 0 0 0 1.934 2h12.132A1.97 1.97 0 0 0 16 18V2a1.97 1.97 0 0 0-1.934-2ZM10.5 6a1.5 1.5 0 1 1 0 2.999A1.5 1.5 0 0 1 10.5 6Zm2.221 10.515a1 1 0 0 1-.858.485h-8a1 1 0 0 1-.9-1.43L5.6 10.039a.978.978 0 0 1 .936-.57 1 1 0 0 1 .9.632l1.181 2.981.541-1a.945.945 0 0 1 .883-.522 1 1 0 0 1 .879.529l1.832 3.438a1 1 0 0 1-.031.988Z"/>
+                    <path d="M5 5V.13a2.96 2.96 0 0 0-1.293.749L.879 3.707A2.98 2.98 0 0 0 .13 5H5Z"/>
+                </svg>
+            </div>
+            <div class="h-2.5 bg-gray-200 rounded-full dark:bg-gray-700 w-48 mb-4 mt-6"></div>
+            <div class="h-2 bg-gray-200 rounded-full dark:bg-gray-700 mb-2.5"></div>
+            <div class="h-2 bg-gray-200 rounded-full dark:bg-gray-700 mb-2.5"></div>
+            <div class="h-2 bg-gray-200 rounded-full dark:bg-gray-700 mr-16"></div>
+            <div class="flex flex-col sm:flex-row justify-between items-center mt-6 gap-5">
+              <div class="inline-flex items-center gap-2">
+                <span class="inline-flex items-center justify-center size-9 rounded-full border-2 border-gray-200 dark:border-gray-700"></span>
+                <span class="inline-flex items-center justify-center size-9 rounded-full border-2 border-gray-200 dark:border-gray-700"></span>
+              </div>
+              <div>
+                  <div class="w-24 h-2 bg-gray-200 rounded-full dark:bg-gray-700"></div>
+              </div>
+            </div>
+            <span class="sr-only">Loading...</span>
+          </div>
+        }
+      </div>
+    } @else {
+      @if (displayedProjects().length > 0) {
+        <div @fadeIn class="py-8 grid gap-6 grid-cols-1 md:grid-cols-2 2xl:grid-cols-3 auto-rows-fr">
+          @for (project of displayedProjects(); track project.id) {
+            <div @fadeInT>
+              <app-card [project]="mapProject(project)"/>
+            </div>
+          }
+        </div>
+        @if (displayedProjects().length < (allProjects().length || 0)) {
+          <button 
+          (click)="loadMore()" 
+          class="cursor-pointer bg-transparent hover:bg-surface-container-low  inline-flex 
+          text-gray-800 dark:text-gray-100 font-regular py-2 px-4 border border-gray-400 rounded-lg shadow">
+            {{ translations().projects.loadMore }}
+          </button>
+        }
+      } @else if (errorMessage() && !loading() && displayedProjects().length === 0) {
+        <p class="text-center mt-4">
+          {{ errorMessage() }}
+        </p>
       }
-    </div>
-  } @else {
-    <p class="text-center mt-4">
-      {{ errorMessage() }}
-    </p>
-  }
-  
-  @if (displayedProjects().length < (allProjects().length || 0)) {
-    <button 
-    (click)="loadMore()" 
-    class="cursor-pointer bg-transparent hover:bg-surface-container-low  inline-flex 
-     text-gray-800 dark:text-gray-100 font-regular py-2 px-4 border border-gray-400 rounded-lg shadow">
-      {{ translations().projects.loadMore }}
-    </button>
-  }
+    }
+  </div>
 </section>
