feat: add about section with new icons and components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,11 @@
 @defer(when !isLoadingLang() && !isLoadingTheme()){
   <app-header (sectionSelected)="scrollToSection($event)" [activeSection]="activeSection" />
-  <main class="flex flex-col  container m-auto px-4 lg:px-16">
+  <main class="flex flex-col container m-auto px-4 lg:px-16">
     <section id="hero">
       <app-hero />
     </section>
     <app-projects [sectionId]="'projects'"/>
+    <app-about/>
   </main>
 }@placeholder {
   <app-loading-placeholder message="Preparando para cargar datos..." />
