feat: add footer section

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
     <app-projects [sectionId]="'projects'"/>
     <app-about/>
   </main>
+  <app-footer />
 }@placeholder {
   <app-loading-placeholder message="Preparando para cargar datos..." />
 }@loading {
