fix: project section jump issue adjust template structure and add new icon

--- a/src/app/sections/about/about.component.html
+++ b/src/app/sections/about/about.component.html
@@ -1,4 +1,4 @@
-<section id="about" class="mt-8 mb-6 py-4">
+<section id="about" class="mt-8 mb-6">
   @let translations = this.translations();
   <h2 class="text-3xl font-bold text-center">{{ translations.aboutUs.title }}</h2>
   <div class="mt-4 flex gap-12 flex-col md:flex-row">
